package Observed;

/**
 * @author sun
 * @title: owner
 * @projectName software_Design_Pattern_Experiment
 * @description: 股票持有者接口
 * @version: 1.0
 * @date 2021/4/2613:57
 */
public interface owner {
    public void hearDate(String hear);
}
