package Observed;

/**
 * @author sun
 * @title: stock
 * @projectName software_Design_Pattern_Experiment
 * @description: 股票接口
 * @version: 1.0
 * @date 2021/4/2613:56
 */
public interface stock {
    public void addOwner(owner o);
    public void delOwner(owner o);
    public void noticeOwner();


}
